<resources>
    <string name="app_name">Solar Calculations</string>
    <string name="show_power">Solar Power</string>
    <string name="show_uvi">UVI measured</string>
    <string name="set_location">Set location</string>
    <string name="get_location">Get location</string>
    <string name="show_calendar">Calendar</string>

    <!-- Strings used for fragments for navigation -->
    <string name="paikannus">Paikannus</string>

    <string name="Sun_current_elevation">Auringon korkeus:</string>
    <string name="Sun_current_azimuth">Auringon suunta:</string>
    <string name="Sun_max_elevation_today">Aurignon maksimi korkeus:</string>
    <string name="Time_maximun_elevation">Aurinko korkeimmillaan [hh:min]:</string>
    <string name="Current_solar_Power">Auringon säteilyteho [W/m2]:</string>
    <string name="Maximun_solar_Power_year">Maximi auringon säteilyteho [W/m2]:</string>
    <string name="Maximum_solar_Power_today">Maximi auringon säteilyteho tänään [W/m2]:</string>
    <string name="UVI_now">UVI:</string>
    <string name="UVI_max_today">Maximi UVI:</string>
    <string name="UVI_over_3">UVI > kolme [hh:min]:</string>
    <string name="UVI_end_time">UVI 3 päättyy [hh:min]:</string>
    <string name="title_activity_solar_power_view">SolarPowerView</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_solar_power">SolarPowerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_uvi">UviActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="text_calendar">Date selected</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="show_sun">Solar Positions</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>