<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.e.solaruvi_android.MainActivity">

    <item
        android:id="@+id/menuShowPaikannusChecked"
        android:checkable="true"
        android:checked="true"
        android:enabled="true"
        android:title="@string/paikannus"
        android:visible="true"
        app:actionViewClass="android.widget.CheckBox"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/set_location"
        android:orderInCategory="100"
        android:title="@string/set_location"/>
    <item
        android:id="@+id/get_location"
        android:orderInCategory="100"
        android:title="@string/get_location"/>
    <item
        android:id="@+id/show_calendar"
        android:orderInCategory="100"
        android:title="@string/show_calendar"/>

</menu>