<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/UVI_now"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_width="wrap_content" />

        <TextView
            android:id="@+id/uvi_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="TextView" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/UVI_max_today"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_width="wrap_content" />

        <TextView
            android:id="@+id/uvi_max_today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="TextView"/>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/UVI_over_3"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_width="wrap_content" />

        <TextView
            android:id="@+id/uvi_over_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:text="TextView"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/UVI_end_time"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_width="wrap_content" />

        <TextView
            android:id="@+id/uvi_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:text="TextView" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>