<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SolarActivity">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/Sun_current_elevation"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="38dp"
                tools:layout_width="wrap_content" />

            <TextView
                android:id="@+id/sun_current_elevation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="TextView" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/Sun_current_azimuth"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="38dp"
                tools:layout_width="wrap_content" />

            <TextView
                android:id="@+id/sun_current_azimuth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="TextView"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/Sun_max_elevation_today"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="38dp"
                tools:layout_width="wrap_content" />

            <TextView
                android:id="@+id/sun_max_elevation_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="TextView"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/Time_maximun_elevation"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="38dp"
                tools:layout_width="wrap_content" />

            <TextView
                android:id="@+id/time_maximun_elevation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time"
                android:text="TextView"/>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>